# setup-environment-joaquin874

./: .gitignore  CMakeLists.txt
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: shared.h
lib/libdyn/src/: shared.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: static.h
lib/libsta/src/: static.c
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
